New in spot 2.8.0.dev (not yet released)

  Nothing yet.

New in spot 2.8 (2019-07-10)

  Command-line tools:

  - autfilt learned --highlight-accepting-run=NUM to highlight some
    accepting run with color NUM.

  - ltldo, ltlcross, and autcross are now preferring posix_spawn()
    over fork()+exec() when available.

  - ltlcross has new options --determinize-max-states=N and
    --determinize-max-edges=M to restrict the use of
    determinization-based complementation to cases where it produces
    automata with at most N states and M edges.  By default
    determinization is now attempted up to 500 states and 5000
    edges.  This is an improvement over the previous default where
    determinization-based complementation was not performed at all,
    unless -D was specified.

  - ltlcross will now skip unnecessary cross-checks and
    consistency-checks (they are unnecessary when all automata
    could be complemented and statistics were not required).

  - genaut learned --m-nba=N to generate Max Michel's NBA familly.
    (NBAs with N+1 states whose determinized have at least N! states.)

  - Due to some new simplification of parity acceptance, the output of
    "ltl2tgba -P -D" is now using a minimal number of colors.  This
    means that recurrence properties have an acceptance condition
    among "Inf(0)", "t", or "f", and persistance properties have an
    acceptance condition among "Fin(0)", "t", or "f".

  - ltldo and ltlcross learned shorthands to call the tools ltl2na,
    ltl2nba, and ltl2ngba from Owl 19.06.  Similarly, autcross learned
    a shorthand for Owl's dra2dpa.

  Documentation:

  - https://spot.lrde.epita.fr/tut90.html is a new file that explains
    the purpose of the spot::bdd_dict object.

  Library:

  - Add generic_accepting_run() as a variant of generic_emptiness_check() that
    returns an accepting run in an automaton with any acceptance condition.

  - twa::accepting_run() and twa::intersecting_run() now work on