@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2012, 2013, 2014, 2016 Laboratoire de Recherche et
+# Copyright (C) 2012-2014, 2016, 2019 Laboratoire de Recherche et
 # Développement de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -59,3 +59,9 @@ ltlcross -D \
   "$ltl2tgba -t -taa -r4 %f > %T" \
   "$ltl2tgba -t -taa -r4 -c %f > %T" \
   "$ltl2tgba -t -taa -r4 -R3 -RDS %f > %T"
+
+
+# This case, reported by Salomon Sickert, used to break ltlcross in
+# Spot 2.8.  We use ltl2tgba twice so ltlcross build cross-products.
+ltlcross --verbose ltl2tgba ltl2tgba \
+-f '(G(F((a1)&(X(X(b1))))))&(G(F((a2)&(X(X(b2))))))&(G(F((a3)&(X(X(b3))))))'
